Switching both project types to use CentOS.

--- a/etc/supervisord.conf
+++ b/etc/supervisord.conf
@@ -2,15 +2,15 @@
 nodaemon=true
 logfile=/var/log/supervisor/supervisord.log
 
+[supervisorctl]
+serverurl = unix:///var/tmp/supervisor.sock
+
+[rpcinterface:supervisor]
+supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
+
 [unix_http_server]
 file = /var/tmp/supervisor.sock
 chmod = 0777
-
-[program:telnetd]
-command=/usr/sbin/busybox telnetd -F -l /bin/bash
-autorestart=true
-stdout_logfile=/var/log/supervisor/telnetd.log
-redirect_stderr=true
 
 [program:nginx]
 command=/usr/sbin/nginx
