Adding proxy_read_timeout used by RStudio devs.

--- a/etc/nginx/port80.d/rstudio.conf
+++ b/etc/nginx/port80.d/rstudio.conf
@@ -6,4 +6,5 @@ location /rstudio/ {
   proxy_set_header Origin "http://localhost:8888";
   proxy_set_header Upgrade $http_upgrade;
   proxy_set_header Connection $connection_upgrade;
+  proxy_read_timeout 300;
 }
