--- a/etc/supervisord.d/rstudio.conf
+++ b/etc/supervisord.d/rstudio.conf
@@ -1,5 +1,6 @@
 [program:rstudio]
-command=sudo -u researcher -H /usr/lib/rstudio-server/bin/rserver --www-port=8888 --auth-none=1
+command=/usr/lib/rstudio-server/bin/rserver --www-port=8888 --auth-none=1
+environment=HOME=/home/researcher,USER=researcher
 directory=/home/researcher
 autorestart=true
 stdout_logfile=/var/log/supervisor/rstudio.log
