Fixing unicode warning

--- a/etc/supervisord.d/rstudio.conf
+++ b/etc/supervisord.d/rstudio.conf
@@ -1,6 +1,6 @@
 [program:rstudio]
 command=/usr/lib/rstudio-server/bin/rserver --www-port=8888 --auth-none=1
-environment=HOME=/home/researcher,USER=researcher
+environment=HOME=/home/researcher,USER=researcher,LANG=C.UTF-8
 directory=/home/researcher
 autorestart=true
 stdout_logfile=/var/log/supervisor/rstudio.log
